...
                      }),
                  SizedBox(
                    width: 10,
                  ),
                  //save button
                  button(
                    key: Key("saveButton"),
                    text: 'Save',
                    color: Colors.teal.shade900,
                    onPressed: () {
                      if (_formkey.currentState!.validate()) {
                        ScaffoldMessenger.of(context).showSnackBar(SnackBar(
                          content: Text('YOUR INFORMATIONS ARE SAVED'),
                          key: Key("snackbarEditPersonalInfo"),
                        ));
                        //call the function to store the details in documents
                        _sendToServer();
                        //navigate to the personal info screen
                        Navigator.push(
                            context,
...
  }

  // Form builder for gender
  FormBuilderDropdown buildGenderFormField() {
    return FormBuilderDropdown(
      name: "gender",
      key: Key("genderField"),
      onSaved: (value) {
        gender = value!;
      },
      validator: (value) => value == null ? 'Select your gender' : null,
      decoration: InputDecoration(
        border: OutlineInputBorder(
...
        ),
        filled: true,
        fillColor: Colors.green[100],
        floatingLabelBehavior: FloatingLabelBehavior.always,
      ),
      hint: Text('Select Gender'),
      items: ['Male', 'Female', 'Other']
          .map((gender) => DropdownMenuItem(
                value: gender,
                child: Text('$gender'),
              ))
          .toList(),
    );
  }

  //TextForm builder for phone number
  TextFormField buildPhoneNumberFormField() {
    return TextFormField(
      key: Key("phoneNumberField"),
      validator: (value) {
        Key("error-empty-phone-number-field");
        if (value!.length < 10 && value.length > 0) {
          return "Phone number should have 10 numbers";
        } else {
          if (value.isEmpty) {
            return 'Please enter your phone number';
          }
...
    );
  }

  // TextForm builder for name
  TextFormField buildNameFormField() {
    return TextFormField(
      key: Key("nameField"),
      keyboardType: TextInputType.text,
      onSaved: (value) {
        name = value!;
      },
      validator: (value) {
        Key("error-empty-name-field");
        if (value!.length > 100 && value.isNotEmpty) {
          return "Enter a valid name";
        } else {
          if (value.isEmpty) {
            return 'Please enter you name';
          }
...
    );
  }

  //TextForm builder for age
  TextFormField buildAgeFormField() {
    return TextFormField(
      key: Key("ageField"),
      validator: (value) {
        Key("error-empty-age-field");
        var numValue = int.tryParse(value!);
        if (value.isNotEmpty && numValue! < 6) {
          return "Age should be greater than 5";
        } else {
          if (value.isEmpty) {
            return 'Please enter your age';
...
