...
                  alignment: Alignment.center,
                  child: Column(
                    children: [

                      //======>test form field for old password<=====
                      TextFormField(
                        key: Key('oldPassword'),
                        onSaved: (value) {
                          oldpassword = value!;
                        },
                        validator: (value) {
                          Key("error-empty-old-password-field");
                          if (value!.isEmpty) {
                            return 'Please enter your old password';
                          }
                        },
                        obscureText: true,
                        obscuringCharacter: "*",
...
                      SizedBox(
                        height: 50,
                      ),

                      //======>test form field For new password<=======
                      TextFormField(
                        key: Key("newPassword"),
                        onSaved: (value) {
                          newpassword = value!;
                        },
                        validator: (value) {
                          Key("error-empty-new-password-field");
                          if (value!.isEmpty) {
                            return 'Please enter a new password';
                          } else {
                            if (value.length < 6) {
                              return "Password is too short (minimum is 6 characters)";
                            }
...
                      SizedBox(
                        height: 50,
                      ),

                      //=====>textform field to confirm new password<========
                      TextFormField(
                        key: Key('confirmPassword'),
                        onSaved: (value) {
                          confirmpassword = value!;
                        },
                        validator: (value) {
                          Key("error-empty-confirm-password-field");
                          if (value!.isEmpty) {
                            return 'Please re-enter the new password';
                          }
                          if (newpassword != confirmpassword) {
                            return "Password does not match";
                          }
...

                              SizedBox(
                                width: 10,
                              ),
                              //save button
                              button(
                                key: Key("saveButtonPassword"),
                                color: Colors.teal.shade900,
                                text: 'Save',
                                onPressed: () {
                                  if (_formkey.currentState!.validate()) {
                                    //No error in validator
                                    _formkey.currentState!.save();
...
