...
                  child: new Card(
                    key: Key("search"),
                    color: Colors.blueGrey[50],
                    child: new ListTile(
                      leading: new Icon(Icons.search),
                      title: new TextField(
                        key:Key("searchbar-history"),
                        controller: _searchControl,
                        decoration: new InputDecoration(
                            hintText: 'Search by a place..',
                            border: InputBorder.none
                        ),
                        onChanged: onSearchTextChanged,
...
